...
    public func showHostDetailsViewController(animated: Bool, forNewHost:Bool) -> HostDetailsViewController?  {
        let hostDetailsViewController = hostDetailsStoryboard
            .instantiateViewController(withIdentifier: hostDetailsControllerIdentifier)
        
        let navController = UINavigationController(rootViewController: hostDetailsViewController)
        navController.navigationBar.topItem?.title = (forNewHost ? "New host" : "Edit host").localized()
        navController.navigationBar.accessibilityIdentifier = "Host Editor"
        
        present(navController, animated: animated, completion: nil)
        
        return hostDetailsViewController as? HostDetailsViewController
    }
    
...
