...
    @IBOutlet weak var closeOutlet: UIBarButtonItem!
    @IBOutlet weak var textViewOutlet: UITextView!
    
    private let disposeBag = DisposeBag()
    override func viewDidLoad() {
        navigationController?.navigationBar.accessibilityIdentifier = "Help"
        closeOutlet.accessibilityIdentifier = "CloseButton"
        closeOutlet.rx.tap
            .subscribe(onNext: { [unowned self] in
                self.dismiss(animated: true, completion: nil)
            })
            .disposed(by: disposeBag)
        
...
